IJPL-136 SC PSC bridge - set
(cherry picked from commit 85cb181bfc859b90c9b75e15ea30e83b5a0d46ad)

IJ-CR-126571

GitOrigin-RevId: 5f6ec7fbe221966eca37860221771b3cdf2dc239